# pytest-tier

./: .gitignore  .isort.cfg  pyproject.toml  readme.md  requirements-tests.txt  tox.ini
.github/workflows/: ci.yml
pytest_tier/: __init__.py
tests/: test_init.py  test_plugin.py  test_pytest_output.py
